@@ -31,8 +31,6 @@
     <description>Apache CXF SSE Integration System Tests</description>
     <url>http://cxf.apache.org</url>
     <properties>
-        <cxf.surefire.fork.vmargs>-XX:MaxPermSize=192m</cxf.surefire.fork.vmargs>
-        <cxf.server.launcher.vmargs>-XX:MaxPermSize=192m</cxf.server.launcher.vmargs>
         <cxf.jetty.version>${cxf.jetty9.version}</cxf.jetty.version>
         <cxf.tomcat.version>8.0.32</cxf.tomcat.version>
     </properties>
@@ -60,8 +58,9 @@
             <artifactId>jetty-webapp</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${cxf.logback.classic.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
